12.9.5 (01-08-2025)
- Improvement: Allow correction of fiscal numbers of customers, which countries are other than of finantial institution [#qubIT-Fenix-7300]

12.9.4 (22-07-2025)
- Refactor: Declare execution year and degree in beans used for treasury reporting [#qubIT-Fenix-7272]

12.9.3 (16-07-2025)
- Bug Fix: Use the default tuition debit entry description format in creating debts manually [#qubIT-Fenix-7244]

12.9.2 (26-06-2025)
- Bug Fix: Added the missing registration filter in finding custom academic treasury events [#qubIT-Fenix-7151]

12.9.1 (03-06-2025)
- Bug Fix: Dissociate the degree when deleting an academic tariff [#qubIT-Fenix-6753]

12.9.0 (30-05-2025)
- Improvement: Associate academic tariffs with units and more than one degree [#qubIT-Fenix-6753]
- Improvement: Create registration tuition debt by academic tariff [#qubIT-Fenix-6753]

12.8.0 (29-05-2025)
- Refactor: Implement missing treasury service method [#qubIT-Fenix-5465]
- Improvement: Customize and uniform the tuition installments and academic debts debit entry description format [#qubIT-Fenix-6941]

12.7.3 (03-03-2025)
- Bug Fix: When using the registration tuition service to calculate the original tuition amounts per installment, initialize the tuition allocation [#qubIT-Fenix-6662]
- Refactor: Unit tests for registration tuition serive, using tuition allocation [#qubIT-Fenix-6662]
- Bug Fix: When recalculation tuition installments, do not annul interest entries [#qubIT-Fenix-6662]

12.7.2 (21-02-2025)
- Bug Fix: In deleting a curricular course, dissociate all debit entries [#qubIT-Fenix-6657]

12.7.1 (20-02-2025)
- Refactor: Transfer relation between tuition products and degree types to this module [#qubIT-Fenix-6648]

12.7.0 (19-02-2025)
- Improvement: Configuration for prefix and suffix of recalculation of tuition installment debit entry description [#qubIT-Fenix-6649]

12.6.0 (19-02-2025)
- Refactor: Service method to find financial entity for unit [#qubIT-Fenix-6627]
